syntax = "proto3";

package media;

option java_multiple_files = true;
option java_package = "com.example.mediaservice.grpc";

service MediaGrpcService {
  rpc UploadMedia(UploadMediaRequest) returns (UploadMediaResponse);
  rpc DeleteMedia(DeleteMediaRequest) returns (DeleteMediaResponse);
}

message UploadMediaRequest {
  string file_name = 1;
  string mime_type = 2;
  bytes file_data = 3;
}

message UploadMediaResponse {
  string url = 1;
}

message DeleteMediaRequest {
  string file_name = 1;
}

message DeleteMediaResponse {
  bool success = 1;
}
